使用 Colaboratory 建立

--- a/0518.ipynb
+++ b/0518.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0518.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOYgnQVMd5ckJFfARIE0v40",
+      "authorship_tag": "ABX9TyOsICwHnz4KjbnTSpqS22S8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -583,25 +583,25 @@
       "source": [
         "test = int(input(\"請輸入一個正整數:\"))\n",
         "sum = 0\n",
-        "for n in range (11):\n",
+        "for n in range (1, test+1):\n",
         "    sum = sum + n \n",
-        "print('1到10的整數和為', sum)"
+        "print('1到',n,'的整數和為', sum)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mg1JKvRYuqdZ",
-        "outputId": "83bf1b35-67f7-40c9-ccd2-929876785560"
+        "outputId": "9e3f3c76-63e9-4679-8660-6e890ac9cb23"
       },
-      "execution_count": 43,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入一個正整數:10\n",
-            "1到10的整數和為 55\n"
+            "1到 10 的整數和為 55\n"
           ]
         }
       ]
@@ -611,25 +611,25 @@
       "source": [
         "test = int(input(\"請輸入一個正整數:\"))\n",
         "sum = 0\n",
-        "for n in range (51):\n",
+        "for n in range (1, test+1):\n",
         "    sum = sum + n \n",
-        "print('1到50的整數和為', sum)"
+        "print('1到',n,'的整數和為', sum)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JdRfpcFWxYya",
-        "outputId": "81b4cc74-e169-46f6-ac74-3b434eaccae4"
+        "outputId": "971d7ee3-cd40-416b-cae2-5a871f0e9b4f"
       },
-      "execution_count": 44,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入一個正整數:50\n",
-            "1到50的整數和為 1275\n"
+            "1到 50 的整數和為 1275\n"
           ]
         }
       ]
@@ -638,71 +638,35 @@
       "cell_type": "code",
       "source": [
         "test = int(input(\"請輸入一個正整數:\"))\n",
-        "sum = 0\n",
-        "for n in range (2):\n",
+        "sum = 0 \n",
+        "for n in range(1, test+1):\n",
         "    sum = sum + n \n",
-        "print('1到1的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (3):\n",
-        "    sum = sum + n \n",
-        "print('1到2的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (4):\n",
-        "    sum = sum + n \n",
-        "print('1到3的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (5):\n",
-        "    sum = sum + n \n",
-        "print('1到4的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (6):\n",
-        "    sum = sum + n \n",
-        "print('1到5的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (7):\n",
-        "    sum = sum + n \n",
-        "print('1到6的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (8):\n",
-        "    sum = sum + n \n",
-        "print('1到7的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (9):\n",
-        "    sum = sum + n \n",
-        "print('1到8的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (10):\n",
-        "    sum = sum + n \n",
-        "print('1到9的整數和為:', sum)\n",
-        "sum = 0\n",
-        "for n in range (11):\n",
-        "    sum = sum + n \n",
-        "print('1到10的整數和為:', sum)"
+        "    print(\"1到\",n,\"的正整數和為:\",sum)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3SbMJOte0Z95",
-        "outputId": "af7de420-9f7f-4fa2-d610-a277d0efa22d"
+        "outputId": "3652af63-2eb0-4ed6-ee4e-76955a095967"
       },
-      "execution_count": 49,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入一個正整數:10\n",
-            "1到1的整數和為: 1\n",
-            "1到2的整數和為: 3\n",
-            "1到3的整數和為: 6\n",
-            "1到4的整數和為: 10\n",
-            "1到5的整數和為: 15\n",
-            "1到6的整數和為: 21\n",
-            "1到7的整數和為: 28\n",
-            "1到8的整數和為: 36\n",
-            "1到9的整數和為: 45\n",
-            "1到10的整數和為: 55\n"
+            "1到 1 的正整數和為: 1\n",
+            "1到 2 的正整數和為: 3\n",
+            "1到 3 的正整數和為: 6\n",
+            "1到 4 的正整數和為: 10\n",
+            "1到 5 的正整數和為: 15\n",
+            "1到 6 的正整數和為: 21\n",
+            "1到 7 的正整數和為: 28\n",
+            "1到 8 的正整數和為: 36\n",
+            "1到 9 的正整數和為: 45\n",
+            "1到 10 的正整數和為: 55\n"
           ]
         }
       ]
