使用 Colaboratory 建立

--- a/統計一A_410650468_呂欣庭.ipynb
+++ b/統計一A_410650468_呂欣庭.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "統計一A 410650468 呂欣庭",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhtXm42RyujYpUqipSvr3C",
+      "authorship_tag": "ABX9TyOMN6tuHe4d49ByAsCAq0zi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,251 +29,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "id": "xt4WHHcGMhNe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "396180a9-e147-45ab-e786-30c1eecad0c9"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "19"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ],
-      "source": [
-        "#指派運算子\n",
-        "c = 18\n",
-        "c += 1\n",
-        "c"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#指派運算子\n",
-        "c = 18\n",
-        "c -= 1\n",
-        "c"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "99G6SjFpRyxN",
-        "outputId": "31a39077-212c-436b-c211-5a9464350043"
+        "id": "YkeU0fdg8ntl",
+        "outputId": "e770efea-22a4-401a-a53a-2f8fcfe8537e"
       },
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "17"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "金州勇士現在有的球員陣容= ['Curry', 'Green', 'Durant', 'Looney', 'Thompson']\n",
+            "勇士今天最高的三個得分 [30, 22, 28] 球員分別為 ['Curry', 'Durant', 'Thompson']\n",
+            "勇士今天最低的兩個得分 [5, 6] 球員分別為 ['Green', 'Looney']\n",
+            "勇士今天最高得分為 Curry 分數為 30 分\n",
+            "勇士今天最低得分為 Green 分數為 5 分\n"
+          ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#指派運算子\n",
-        "c = 18\n",
-        "c /= 1\n",
-        "c"
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cldJIAL0SOiL",
-        "outputId": "249455aa-539f-4735-aac8-6c039df6d6eb"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "18.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "#關係運算子\n",
-        "1 < 2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B6CVTquASZ5V",
-        "outputId": "9ed59a21-e5d3-416b-cdb4-f6ee2f0d9f00"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#關係運算子\n",
-        "1 > 2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NFK5dzgkS-ny",
-        "outputId": "3c53c85a-d8f8-4330-ed53-be66458291b4"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#關係運算子\n",
-        "1 == 2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nZOUI4XnTNZI",
-        "outputId": "0cddf7bb-f4d8-4fb8-c413-6d5e1e66566a"
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#邏輯運算子\n",
-        "(1<2)and(1>8)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YoClirmBTPkt",
-        "outputId": "bc3a0a3c-8cf6-48ac-e83f-07a904711a89"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#邏輯運算子\n",
-        "(1<2)or(1>8)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5JFWu90rT1Jf",
-        "outputId": "8bfdc485-d14c-4ffd-d345-f7e149e82583"
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#邏輯運算子\n",
-        "not(1<2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "y8Z_hJtYT_S9",
-        "outputId": "8ec178e7-b4dd-4383-a29e-af855dadeea0"
-      },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
+        "Player = ['Curry','Green','Durant','Looney','Thompson']\n",
+        "Fraction = [30,5,22,6,28]\n",
+        "print('金州勇士現在有的球員陣容=',Player)\n",
+        "print('勇士今天最高的三個得分',Fraction[0:5:2],'球員分別為',Player[0:5:2])\n",
+        "print('勇士今天最低的兩個得分',Fraction[1:4:2],'球員分別為',Player[1:4:2])\n",
+        "print('勇士今天最高得分為',Player[0],'分數為',max(Fraction),'分')\n",
+        "print('勇士今天最低得分為',Player[1],'分數為',min(Fraction),'分')"
       ]
     },
     {
@@ -282,7 +66,7 @@
         ""
       ],
       "metadata": {
-        "id": "R_b7zKlPUCiO"
+        "id": "SlEhmI9wB6Rl"
       },
       "execution_count": null,
       "outputs": []
