--- a/統計一A_410650468_呂欣庭.ipynb
+++ b/統計一A_410650468_呂欣庭.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "統計一A 410650468 呂欣庭",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMN6tuHe4d49ByAsCAq0zi",
+      "authorship_tag": "ABX9TyPTItgHQJ8kL76qyzm/91/t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,21 +29,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YkeU0fdg8ntl",
-        "outputId": "e770efea-22a4-401a-a53a-2f8fcfe8537e"
+        "outputId": "dee70513-ff76-44ea-bb2c-fcdf55d541e6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "金州勇士現在有的球員陣容= ['Curry', 'Green', 'Durant', 'Looney', 'Thompson']\n",
-            "勇士今天最高的三個得分 [30, 22, 28] 球員分別為 ['Curry', 'Durant', 'Thompson']\n",
+            "金州勇士現在有的球員陣容= ['Curry', 'Green', 'Wiggins', 'Looney', 'Thompson']\n",
+            "勇士今天最高的三個得分 [30, 22, 28] 球員分別為 ['Curry', 'Wiggins', 'Thompson']\n",
             "勇士今天最低的兩個得分 [5, 6] 球員分別為 ['Green', 'Looney']\n",
             "勇士今天最高得分為 Curry 分數為 30 分\n",
             "勇士今天最低得分為 Green 分數為 5 分\n"
@@ -53,6 +53,7 @@
       "source": [
         "Player = ['Curry','Green','Durant','Looney','Thompson']\n",
         "Fraction = [30,5,22,6,28]\n",
+        "Player[2] = 'Wiggins'\n",
         "print('金州勇士現在有的球員陣容=',Player)\n",
         "print('勇士今天最高的三個得分',Fraction[0:5:2],'球員分別為',Player[0:5:2])\n",
         "print('勇士今天最低的兩個得分',Fraction[1:4:2],'球員分別為',Player[1:4:2])\n",
