使用 Colaboratory 建立

--- a/測試.ipynb
+++ b/測試.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "測試.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcj1k2GeL4d72TaVGH6xGp",
+      "authorship_tag": "ABX9TyMPqGzshWDuzrOv6UsIpi3b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,10 +67,47 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "n = 5"
       ],
       "metadata": {
         "id": "RSgdVDbc9LMT"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2UZVMjlD9dDk",
+        "outputId": "be985b6d-a71b-4e49-d12b-838a847f774c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "BrV93I-C9dzm"
       },
       "execution_count": null,
       "outputs": []
