--- a/期末實作_統計一A_呂欣庭_410650468.ipynb
+++ b/期末實作_統計一A_呂欣庭_410650468.ipynb
@@ -185,12 +185,27 @@
         "money = int(input(\"請輸入購物金額:\"))\n",
         "print(\"你購買的總金額為:\", money)\n",
         "if (money >= 10000):\n",
-        "   print(\"你享有八折的折扣!\",\"折扣後的價格為:\", money*0.8, end = \"元\\n\")\n",
-        "  elif(money >= 5000 and money <= 10000):\n",
+        "    if(money >= 10000):\n",
+        "       print(\"你享有八折的折扣!\",\"折扣後的價格為:\", money*0.8, end = \"元\\n\")\n",
+        "    elif(money >= 5000):\n",
         "      print(\"你享有八五折的折扣!\",\"折扣後的價格為:\", money*0.85, end = \"元\\n\")\n",
-        "  elif(money >= 3000):\n",
+        "    elif(money >= 3000):\n",
         "      print(\"你享有九折的折扣!\",\"折扣後的價格為:\", money*0.9, end = \"元\\n\")\n",
-        "  else(money >= 1000):\n",
+        "    else:\n",
+        "      print(\"你享有九五折的折扣!\",\"折扣後的價格為:\", money*0.95, end = \"元\\n\")\n",
+        "else:\n",
+        "    print(money, \"元沒達到最低折扣金額!\",\"你需要付款的金額為:\", money, \"元\")\n",
+        "\n",
+        "money = int(input(\"請輸入購物金額:\"))\n",
+        "print(\"你購買的總金額為:\", money)\n",
+        "if (money >= 10000):\n",
+        "    if(money >= 10000):\n",
+        "       print(\"你享有八折的折扣!\",\"折扣後的價格為:\", money*0.8, end = \"元\\n\")\n",
+        "    elif(money >= 5000):\n",
+        "      print(\"你享有八五折的折扣!\",\"折扣後的價格為:\", money*0.85, end = \"元\\n\")\n",
+        "    elif(money >= 3000):\n",
+        "      print(\"你享有九折的折扣!\",\"折扣後的價格為:\", money*0.9, end = \"元\\n\")\n",
+        "    else:\n",
         "      print(\"你享有九五折的折扣!\",\"折扣後的價格為:\", money*0.95, end = \"元\\n\")\n",
         "else:\n",
         "    print(money, \"元沒達到最低折扣金額!\",\"你需要付款的金額為:\", money, \"元\")"
@@ -198,19 +213,22 @@
       "metadata": {
         "id": "F5zjKbfGFKIq",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20c8a67e-e260-41bc-c4e1-a282ebbfd3b3"
+        "outputId": "91f47ad4-dcca-4f40-94ad-3916908a0363"
       },
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-b40af0a5b2c9>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    elif(money >= 5000 and money <= 10000):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入購物金額:12000\n",
+            "你購買的總金額為: 12000\n",
+            "你享有八折的折扣! 折扣後的價格為: 9600.0元\n",
+            "請輸入購物金額:500\n",
+            "你購買的總金額為: 500\n",
+            "500 元沒達到最低折扣金額! 你需要付款的金額為: 500 元\n"
           ]
         }
       ]
@@ -232,24 +250,33 @@
         "sum = 0\n",
         "number = int(input(\"請輸入一個正整數:\"))\n",
         "for a in range (1,number+1):\n",
-        "      sum = 1 + a\n",
-        "print(\"1到\", a, \"的整數和為:\", sum)"
+        "      sum = sum + a\n",
+        "      print(\"1到\"+str(a)+\"的整數和為:\", sum)"
       ],
       "metadata": {
         "id": "yh8J_PjKJr1u",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cc4220c0-9038-4547-90ca-7aa3c0359533"
+        "outputId": "1b589550-4400-49f3-cf35-3025b7044e60"
       },
-      "execution_count": 15,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "請輸入一個正整數:10\n",
-            "1到 10 的整數和為: 11\n"
+            "1到1的整數和為: 1\n",
+            "1到2的整數和為: 3\n",
+            "1到3的整數和為: 6\n",
+            "1到4的整數和為: 10\n",
+            "1到5的整數和為: 15\n",
+            "1到6的整數和為: 21\n",
+            "1到7的整數和為: 28\n",
+            "1到8的整數和為: 36\n",
+            "1到9的整數和為: 45\n",
+            "1到10的整數和為: 55\n"
           ]
         }
       ]
@@ -268,15 +295,29 @@
     {
       "cell_type": "code",
       "source": [
-        "sum = 0 \n",
-        "for a in range(2,10)\n",
-        "      (%d*%d,)"
+        "for a in range(2,10):\n",
+        "    for b in range(1,10):\n",
+        "        number = a * b\n",
+        "        print(\"%d*%d=%2d\"   %(a, b, number), end=\"  \")\n",
+        "print()"
       ],
       "metadata": {
-        "id": "Q81c3yWcJudc"
+        "id": "Q81c3yWcJudc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ac3e4da4-6b58-4f3e-a20e-8b6c306a53d5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2*1= 2  2*2= 4  2*3= 6  2*4= 8  2*5=10  2*6=12  2*7=14  2*8=16  2*9=18  3*1= 3  3*2= 6  3*3= 9  3*4=12  3*5=15  3*6=18  3*7=21  3*8=24  3*9=27  4*1= 4  4*2= 8  4*3=12  4*4=16  4*5=20  4*6=24  4*7=28  4*8=32  4*9=36  5*1= 5  5*2=10  5*3=15  5*4=20  5*5=25  5*6=30  5*7=35  5*8=40  5*9=45  6*1= 6  6*2=12  6*3=18  6*4=24  6*5=30  6*6=36  6*7=42  6*8=48  6*9=54  7*1= 7  7*2=14  7*3=21  7*4=28  7*5=35  7*6=42  7*7=49  7*8=56  7*9=63  8*1= 8  8*2=16  8*3=24  8*4=32  8*5=40  8*6=48  8*7=56  8*8=64  8*9=72  9*1= 9  9*2=18  9*3=27  9*4=36  9*5=45  9*6=54  9*7=63  9*8=72  9*9=81  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
