--- a/期末實作_統計一A_呂欣庭_410650468.ipynb
+++ b/期末實作_統計一A_呂欣庭_410650468.ipynb
@@ -361,13 +361,31 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "number = [1,2,3]\n",
+        "name = [\"Tom\",\"Mary\",\"Tony\"]\n",
+        "scores = [85,79,93]\n",
+        "for a in range(len(name)):\n",
+        "    print(\"編號:%d 姓名:%s \" % (number[b],name[b])"
       ],
       "metadata": {
-        "id": "pPkO4uz0Jz44"
+        "id": "pPkO4uz0Jz44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "outputId": "a3ed796c-4b2c-47f2-e9c3-bcc1d50af012"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-0d1f4e5bfe80>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"編號:%d 姓名:%s \" % (number[b],name[b])\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -381,7 +399,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "無"
       ],
       "metadata": {
         "id": "ULcK1jRBmH2h"
