使用 Colaboratory 建立

--- a/期末實作_統計一A_呂欣庭_410650468.ipynb
+++ b/期末實作_統計一A_呂欣庭_410650468.ipynb
@@ -339,13 +339,29 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "n=0\n",
+        "for a in range(1,100+1):\n",
+        "    if a%9==0 or a%13==0 :\n",
+        "        n+=a\n",
+        "print(\"數值1到100中,\",\"9或13倍數的數之總和為\",n)"
       ],
       "metadata": {
-        "id": "oCQSFuq-JxEq"
+        "id": "oCQSFuq-JxEq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41f6daf9-ec79-4acc-8fb2-7c40d3b8cdb9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "數值1到100中, 9或13倍數的數之總和為 958\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -365,24 +381,24 @@
         "name = [\"Tom\",\"Mary\",\"Tony\"]\n",
         "scores = [85,79,93]\n",
         "for a in range(len(name)):\n",
-        "    print(\"編號:%d 姓名:%s \" % (number[b],name[b])"
+        "    print(\"編號:%d 姓名:%s 成績:%d\" % (number[a],name[a],scores[a]))"
       ],
       "metadata": {
         "id": "pPkO4uz0Jz44",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3ed796c-4b2c-47f2-e9c3-bcc1d50af012"
+        "outputId": "deae1528-4b8c-46d7-901a-939400f5c5b0"
       },
-      "execution_count": 39,
+      "execution_count": 48,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-0d1f4e5bfe80>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"編號:%d 姓名:%s \" % (number[b],name[b])\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "編號:1 姓名:Tom 成績:85\n",
+            "編號:2 姓名:Mary 成績:79\n",
+            "編號:3 姓名:Tony 成績:93\n"
           ]
         }
       ]
