使用 Colaboratory 建立

--- a/期末實作_統計一A_呂欣庭_410650468.ipynb
+++ b/期末實作_統計一A_呂欣庭_410650468.ipynb
@@ -343,22 +343,22 @@
         "for a in range(1,100+1):\n",
         "    if a%9==0 or a%13==0 :\n",
         "        n+=a\n",
-        "print(\"數值1到100中,\",\"9或13倍數的數之總和為\",n)"
+        "print(\"數值1到100中，9或13倍數的數之總和為\",n)"
       ],
       "metadata": {
         "id": "oCQSFuq-JxEq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41f6daf9-ec79-4acc-8fb2-7c40d3b8cdb9"
+        "outputId": "f48fe1fc-3ce5-435c-d1b9-3b5c2521acdc"
       },
-      "execution_count": 50,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "數值1到100中, 9或13倍數的數之總和為 958\n"
+            "數值1到100中，9或13倍數的數之總和為 958\n"
           ]
         }
       ]
