使用 Colaboratory 建立

--- a/期末實作_統計一A_呂欣庭_410650468.ipynb
+++ b/期末實作_統計一A_呂欣庭_410650468.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Epjrt_88DkpR",
         "colab": {
@@ -109,7 +109,7 @@
         "id": "gIpRS67m_vNr",
         "outputId": "f627e87d-209f-4473-9774-2ddf5e9e8b2a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         },
         "outputId": "6825d108-3152-4b27-a601-eaefa59fab5e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "    else:\n",
         "      print(\"你享有九五折的折扣!\",\"折扣後的價格為:\", money*0.95, end = \"元\\n\")\n",
         "else:\n",
-        "    print(money, \"元沒達到最低折扣金額!\",\"你需要付款的金額為:\", money, \"元\")\n",
+        "    print(money, \"元沒達到最低折扣金額!\",\"您需要付款的金額為:\", money, \"元\")\n",
         "\n",
         "money = int(input(\"請輸入購物金額:\"))\n",
         "print(\"你購買的總金額為:\", money)\n",
@@ -208,7 +208,7 @@
         "    else:\n",
         "      print(\"你享有九五折的折扣!\",\"折扣後的價格為:\", money*0.95, end = \"元\\n\")\n",
         "else:\n",
-        "    print(money, \"元沒達到最低折扣金額!\",\"你需要付款的金額為:\", money, \"元\")"
+        "    print(money, \"元沒達到最低折扣金額!\",\"您需要付款的金額為:\", money, \"元\")"
       ],
       "metadata": {
         "id": "F5zjKbfGFKIq",
@@ -217,7 +217,7 @@
         },
         "outputId": "91f47ad4-dcca-4f40-94ad-3916908a0363"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +260,7 @@
         },
         "outputId": "1b589550-4400-49f3-cf35-3025b7044e60"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
         },
         "outputId": "09f073e0-c63c-4171-d859-dc8fbc7106ab"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
         },
         "outputId": "f48fe1fc-3ce5-435c-d1b9-3b5c2521acdc"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
         },
         "outputId": "deae1528-4b8c-46d7-901a-939400f5c5b0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
